# anchor-native-frankenstein

./: Anchor.toml  README.md
idl/: anchor_native_frankenstein.json  anchor_native_frankenstein.ts
programs/anchor-native-frankenstein/: Cargo.toml
programs/anchor-native-frankenstein/src/: lib.rs
tests/: anchor-native-frankenstein.ts
